fixed web application mobile menu styles

--- a/assets/sass/components/navigation/web-application/_base.scss
+++ b/assets/sass/components/navigation/web-application/_base.scss
@@ -28,7 +28,7 @@
     a {
       font-size: 12px;
       color: lighten($nav--hover-color, 20%);
-      border-bottom: solid 3px $submenu--border-color;
+      border-bottom: solid 3px $submenu--border-color !important;
     }
   }
 
